more content added + some alignment issues

--- a/practice/cv.css
+++ b/practice/cv.css
@@ -3,15 +3,16 @@ body{
     padding-top: 0;
     padding-bottom: 0;
     font-family: Helvetica, sans-serif;
-    background-color: #fcfcfc;
+    background-color: gray;
     display: flex;
     justify-content: center;}
 
 #main{
     display: flex;
     flex-direction: row;
-    width: 60vw;
+    width: 65vw;
     height: 120vh;
+    background-color: white;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
@@ -19,15 +20,17 @@ body{
 
 #sidebar{
     background-color: #223d39;
-    width: 18vw;
+    width: 16vw;
     height: 100%;
     border-right: 1px solid black;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    margin-right: 0;
+    position: absolute;
 }
 
 .avatar{
-    width: 13.3vw;
-    height: 22vh;
+    width: 10vw;
+    height: 15vh;
     padding-left: 16%;
     margin-top: 10%;
     margin-bottom: 10%
@@ -163,20 +166,18 @@ body{
 }
 
 #rest-of-the-page{
-    flex-grow:2;
+    padding-left: 20%;
 }
 
 #title{
     color : #223d39;
     margin-top: 0%;
-    padding-left: 8.5vw;    
+    padding-left: 13.5vw;    
+
 }
 
 #title>h1{
     margin-bottom: 0;
-}
-#title>p{
-    margin-top: 0;
 }
 
 #separator {
@@ -189,17 +190,50 @@ body{
 }
 
 #professional-summary{
+    margin-left: 10%;
     color: black;
-    padding-top: 5%
+    padding-top: 5%;
+    margin-right: 5%;
 }
 
-#professional-summary>h2{
-    margin-left: 2.5vw;
+#work-history{
+    border-top: 1px solid black;
+    margin-top: 5%;
+    color: black;
+    margin-left: 10%;
+}
+
+#professional-summary>h2, #work-history>h2{
     font-size: 1.2em;
     font-weight: bold;
 }
 
 #professional-summary>p{
-    margin-left: 2.0vw;
-    font-size: 0.9em;
-    }
+    font-size: 0.8em;
+    margin-right: 2%;
+    margin-top: -1%
+}
+#work-history>h2{
+    margin-top: 0;
+}
+
+.work-title{
+    font-size: 0.95em;
+    font-weight: bold;
+    margin-bottom: 5%;
+}
+
+.work-date{
+    font-size: 0.6em;
+    float:right;
+    margin-right: 20%;
+    padding-top: 1%;
+}
+
+.work-location{
+    font-size: 0.95em;
+    padding-left: 0.5%;
+    font-weight: 100;
+    color: rgb(67, 62, 62);
+}
+
